packages/@lwc/engine-server/src/__tests__/fixtures/wire/errors/throws-on-computed-method/modules/x/wire/adapter.js
export class adapter {
    constructor(dataCallback) {
        this.dc = dataCallback;
    }

    connect() {}

    update(config) {
        this.dc(config.name);
    }

    disconnect() {}
}
